--- a/MosaicCollectionView/en.lproj/MainStoryboard.storyboard
+++ b/MosaicCollectionView/en.lproj/MainStoryboard.storyboard
@@ -4,10 +4,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
     <scenes>
-        <!--Mosaic View-->
+        <!--Mosaic View Controller-->
         <scene sceneID="ZfL-4T-pB1">
             <objects>
-                <collectionViewController autoresizesArchivedViewToFullSize="NO" id="RRX-FU-Qcq" customClass="MosaicView" sceneMemberID="viewController">
+                <collectionViewController autoresizesArchivedViewToFullSize="NO" id="RRX-FU-Qcq" customClass="MosaicViewController" sceneMemberID="viewController">
                     <collectionView key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" id="UDW-bd-UJp">
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
