--- a/MosaicCollectionView/en.lproj/MainStoryboard.storyboard
+++ b/MosaicCollectionView/en.lproj/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12C3006" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="RRX-FU-Qcq">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="1YD-fJ-b90">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
@@ -32,7 +32,62 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hjM-sG-7px" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <customObject id="Bgg-gN-w1R" customClass="CustomDataSource"/>
             </objects>
-            <point key="canvasLocation" x="29" y="63"/>
+            <point key="canvasLocation" x="4" y="-447"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="qXx-mX-T0c">
+            <objects>
+                <viewController id="1YD-fJ-b90" customClass="ViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="4qm-FC-CpP">
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ovN-Ze-4C9">
+                                <collectionViewLayout key="collectionViewLayout" id="LlP-FD-KAy" customClass="MosaicLayout"/>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="Vks-4a-4c6" customClass="MosaicCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="kzA-lS-Xah" id="jXS-WP-GiO"/>
+                                </connections>
+                            </collectionView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" barStyle="blackTranslucent" translatesAutoresizingMaskIntoConstraints="NO" id="EtK-FR-hOe">
+                                <items>
+                                    <barButtonItem systemItem="add" id="rFu-2F-okd">
+                                        <connections>
+                                            <action selector="addButtonPressed:" destination="1YD-fJ-b90" id="wZV-3w-b9G"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ovN-Ze-4C9" firstAttribute="bottom" secondItem="4qm-FC-CpP" secondAttribute="bottom" type="default" id="0dD-5h-OEb"/>
+                            <constraint firstItem="EtK-FR-hOe" firstAttribute="bottom" secondItem="4qm-FC-CpP" secondAttribute="bottom" type="default" id="2MJ-pK-pbQ"/>
+                            <constraint firstItem="ovN-Ze-4C9" firstAttribute="top" secondItem="4qm-FC-CpP" secondAttribute="top" type="default" id="IBA-lE-OH7"/>
+                            <constraint firstItem="EtK-FR-hOe" firstAttribute="trailing" secondItem="4qm-FC-CpP" secondAttribute="trailing" type="default" id="bUo-Vm-Z37"/>
+                            <constraint firstItem="ovN-Ze-4C9" firstAttribute="trailing" secondItem="4qm-FC-CpP" secondAttribute="trailing" type="default" id="eci-nY-Fwi"/>
+                            <constraint firstItem="ovN-Ze-4C9" firstAttribute="leading" secondItem="4qm-FC-CpP" secondAttribute="leading" type="default" id="o0y-Gc-p2T"/>
+                            <constraint firstItem="EtK-FR-hOe" firstAttribute="leading" secondItem="4qm-FC-CpP" secondAttribute="leading" type="default" id="uFD-c3-wf1"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="_collectionView" destination="ovN-Ze-4C9" id="6Jn-DS-UoS"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aSU-XF-Elf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <customObject id="kzA-lS-Xah" customClass="CustomDataSource"/>
+            </objects>
+            <point key="canvasLocation" x="4" y="216"/>
         </scene>
     </scenes>
     <classes>
@@ -48,6 +103,9 @@
         <class className="MosaicViewController" superclassName="UICollectionViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/MosaicViewController.h"/>
         </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
         <class className="UICollectionReusableView" superclassName="UIView">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionReusableView.h"/>
         </class>
@@ -59,6 +117,13 @@
         </class>
         <class className="UICollectionViewLayout" superclassName="NSObject">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewLayout.h"/>
+        </class>
+        <class className="ViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="addButtonPressed:"/>
+                <relationship kind="outlet" name="_collectionView" candidateClass="UICollectionView"/>
+            </relationships>
         </class>
     </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
