--- a/MosaicCollectionView/en.lproj/MainStoryboard.storyboard
+++ b/MosaicCollectionView/en.lproj/MainStoryboard.storyboard
@@ -4,10 +4,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Custom View Controller-->
         <scene sceneID="qXx-mX-T0c">
             <objects>
-                <viewController id="1YD-fJ-b90" customClass="ViewController" sceneMemberID="viewController">
+                <viewController id="1YD-fJ-b90" customClass="CustomViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="4qm-FC-CpP">
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -81,13 +81,6 @@
         </class>
         <class className="UICollectionViewLayout" superclassName="NSObject">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewLayout.h"/>
-        </class>
-        <class className="ViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="addButtonPressed:"/>
-                <relationship kind="outlet" name="_collectionView" candidateClass="UICollectionView"/>
-            </relationships>
         </class>
     </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
